tests/compiletests/ui/lang/consts/runtime-array-invalid-const-bitcast.stderr
error: unsupported unsized `[u16]` constant with 1 trailing bytes
   |
   = note: used by unnamed global (%87)
note: used from within `runtime_array_invalid_const_bitcast::main`
  --> <$DIR/runtime-array-invalid-const-bitcast.rs>:18:25
   |
LL |     *output = u32::from(use_runtime_array_ptr(BAD_RUNTIME_ARRAY_PTR));
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
  --> <$DIR/runtime-array-invalid-const-bitcast.rs>:17:8
   |
LL | pub fn main(output: &mut u32) {
   |        ^^^^

error: aborting due to 1 previous error

